--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,15 +7,23 @@
         "blinkeyescontact",
         "botón",
         "bulbasaur",
+        "Celebi",
         "charmander",
+        "Competi",
+        "Compi",
         "Descripción",
+        "Dialga",
         "eevee",
         "estilo",
         "eyecontact",
+        "Groudon",
         "growlithe",
+        "Hisui",
         "jigglypuff",
         "mouthclose",
         "navegador",
+        "Nestall",
+        "Palkia",
         "pidgey",
         "pikachu",
         "pokeball",
@@ -26,6 +34,7 @@
         "rattata",
         "rectanglev",
         "reproducción",
+        "snagball",
         "snorlax",
         "soporta",
         "squirtle",
