--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,12 +3,18 @@
     "cSpell.words": [
         "abra",
         "Animación",
+        "Arcanine",
+        "Blastoise",
         "blinkeyes",
         "blinkeyescontact",
         "botón",
         "bulbasaur",
+        "Caterpie",
         "Celebi",
+        "Charizard",
         "charmander",
+        "Clefable",
+        "Clefairy",
         "Competi",
         "Compi",
         "Descripción",
@@ -16,14 +22,19 @@
         "eevee",
         "estilo",
         "eyecontact",
+        "Gengar",
         "Groudon",
         "growlithe",
         "Hisui",
         "jigglypuff",
+        "Metapod",
         "mouthclose",
+        "Munchlax",
         "navegador",
         "Nestall",
+        "Ninetales",
         "Palkia",
+        "Pidgeot",
         "pidgey",
         "pikachu",
         "pokeball",
@@ -31,6 +42,10 @@
         "Pokedex",
         "pokemons",
         "presionó",
+        "Quintana",
+        "Raichu",
+        "Ratata",
+        "Raticate",
         "rattata",
         "rectanglev",
         "reproducción",
@@ -39,6 +54,7 @@
         "soporta",
         "squirtle",
         "vulpix",
-        "webp"
+        "webp",
+        "Wigglytuff"
     ]
 }
