LocalStorage Fixed / Added New Pokemons (Format WEBP) / Removed All Useles Images

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "Blastoise",
         "blinkeyes",
         "blinkeyescontact",
+        "bodyform",
         "botón",
         "bulbasaur",
         "Caterpie",
@@ -17,22 +18,33 @@
         "Clefairy",
         "Competi",
         "Compi",
+        "Cubone",
         "Descripción",
         "Dialga",
         "eevee",
         "estilo",
         "eyecontact",
+        "Furret",
+        "generationpokemon",
         "Gengar",
         "Groudon",
         "growlithe",
+        "Gyarados",
         "Hisui",
+        "idpokemon",
         "jigglypuff",
+        "Koffing",
+        "lastname",
+        "Magikarp",
+        "mainform",
+        "Marowak",
         "Metapod",
         "mouthclose",
         "Munchlax",
         "navegador",
         "Nestall",
         "Ninetales",
+        "Onix",
         "Palkia",
         "Pidgeot",
         "pidgey",
@@ -40,21 +52,31 @@
         "pokeball",
         "Pokeballs",
         "Pokedex",
+        "pokemonadd",
         "pokemons",
+        "Ponyta",
         "presionó",
         "Quintana",
         "Raichu",
+        "Rapidash",
         "Ratata",
         "Raticate",
         "rattata",
         "rectanglev",
         "reproducción",
+        "Sentret",
         "snagball",
         "snorlax",
         "soporta",
         "squirtle",
+        "Steelix",
+        "typepokemon",
+        "Venomoth",
+        "Venonat",
+        "Voltorb",
         "vulpix",
         "webp",
+        "Weezing",
         "Wigglytuff"
     ]
 }
